# mycapslock

./: Cargo.toml  README.md  build.rs  config.toml  default.toml
src/: actions.rs  config.rs  hook.rs  main.rs  state.rs  tray.rs
