[package]
name = "mycapslock"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
] }
enigo = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "7"
